# GdkImageProcessing

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
GUI/: Application.cpp  Application.h  CMakeLists.txt  IImageAdapter.h  IImageContainer.h  ImageAdapter.cpp  ImageAdapter.h  MainWindow.cpp  MainWindow.h  MainWindow.xml  MainWindowController.cpp  MainWindowController.h  UserDataProvider.cpp  UserDataProvider.h
core/: CMakeLists.txt  CoreLibrary.cpp  CoreLibrary.h  IImage.h  IWatermark.h  Image.cpp  Image.h  ImageBuffer.cpp  ImageBuffer.h  ImageLoader.cpp  ImageLoader.h  Watermark.cpp  Watermark.h
